@@ -3,6 +3,7 @@
 2016-03-18  Brecht Sanders  https://github.com/brechtsanders/
 
   * optimized code for writing cell data
+  * added with parameter to xlsxiowrite_add_column()
 
 0.1.3
 
